# gtk-feed

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac  feeds.xml.dist  main.c  rssfeed.c  rssfeed.h
data/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  about.c  about.h  callbacks.c  callbacks.h  common.c  common.h  dialogs.c  dialogs.h  feeds.c  feeds.h  main.c  options.c  options.h  rssfeed.c  rssfeed.h
